@@ -1,9 +1,11 @@
 * Thu Oct 10 2002 <gerbier@users.sourceforge.net> 0.7.2
 - replace vi by sed to change release
-- add command lines options 
+- add command lines options (-h : help, -v : verbose, -V: version)
 - add lsm description
 - move .popt to /etc/rpmrebuild
 - have a link from rpmrebuild.sh to rpmrebuild
+- add option -b for batch processing
+- add option -k to keep installed files perm
 
 * Mon Oct  7 2002  <valery_reznic@users.sourceforge.net> 0.7.1
 - split the script for a more modular way
